# AFLGenParallel

./: README.md  pyproject.toml
config/: config.json
src/AFLGenParallel/: cli.py  main.py
src/aflgenparallel/: cli.py  config_master.py  fuzzer.py  main.py
