[project]
name = "aflgenparallel"
version = "0.1.0"
description = "Tool for generating AFL parallel fuzzing commands based on config .json file"
authors = [
    {name = "Stepan Gulyaev",email = "stepan.gulyaev.02@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
